--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/productos.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/productos.html
@@ -80,7 +80,37 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="valor_unitario">Categoria: </label>
-                                    <input type="text" id="categoria" name="categoria">
+                                    <select id="categoria" name="categoria">
+                                        <option value="Abarrotes">Abarrotes</option>
+                                        <option value="Aderezos">Aderezos</option>
+                                        <option value="Anchetas">Anchetas</option>
+                                        <option value="Bebidas">Bebidas</option>
+                                        <option value="Cereales">Cereales</option>
+                                        <option value="Cigarrillos">Cigarrillos</option>
+                                        <option value="Comidas prep">Comidas prep.</option>
+                                        <option value="Congelados">Congelados</option>
+                                        <option value="Degustacion">Degustacion</option>
+                                        <option value="Desechables">Desechables</option>
+                                        <option value="Dinero">Dinero</option>
+                                        <option value="Dulces">Dulces</option>
+                                        <option value="Embutidos">Embutidos</option>
+                                        <option value="Enlatados">Enlatados</option>
+                                        <option value="Frutos secos">Frutos secos</option>
+                                        <option value="Harina">Harina</option>
+                                        <option value="Insumos cr">Insumos cr</option>
+                                        <option value="Jamones">Jamones</option>
+                                        <option value="Lacteos">Lacteos</option>
+                                        <option value="Panaderia">Panaderia</option>
+                                        <option value="Pasabocas">Pasabocas</option>
+                                        <option value="Queso">Queso</option>
+                                        <option value="Reposteria">Reposteria</option>
+                                        <option value="Retales">Retales</option>
+                                        <option value="Salsas">Salsas</option>
+                                        <option value="Sandwichs y cr">Sandwichs y cr</option>
+                                        <option value="Tablas y anchetas">Tablas y anchetas</option>
+                                        <option value="Licores">Licores</option>
+                                        <option value="Vencidos">Vencidos</option>
+                                    </select>
                                 </div>
 
                             </div>
@@ -138,8 +168,8 @@
                         <td><button class="btn btn-success btn-sm"
                                 onclick="openStockModal('{{ d.id_producto }}')" data-bs-toggle="modal"
                                 data-bs-target="#stockModal">Agregar Stock</button></td>
-                        <td><button class="btn btn-primary btn-sm" id="btn-editar{{d.id_producto}}"
-                                onclick="openEditModal('{{ d.id_producto }}', '{{ d.descripcion }}', '{{ d.categoria }}', '{{ d.nombre_proveedor }}', '{{ d.stock }}', '{{ d.unidad_medida }}', '{{ d.valor_unitario }}')">Editar</button></td>
+                        <td><button class="btn btn-primary btn-sm" onclick="openEditModal('{{ d.id_producto }}', '{{ d.codigo }}', '{{ d.descripcion }}', '{{ d.categoria }}', '{{ d.id_proveedor }}', '{{ d.nombre_proveedor }}', '{{ d.valor_unitario }}', '{{ d.unidad_medida }}', '{{ d.stock }}')">Editar</button></td>
+
                         <td><a href="{{url_for('delete', id_producto=d.id_producto)}}"
                                 class="btn btn-danger btn-sm">Eliminar</a></td>
                     </tr>
@@ -166,58 +196,73 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" onclick="closeStockModal()">Cancelar</button>
                         <button type="submit" class="btn btn-default">Agregar Stock</button>
+                        
                     </div>
                 </form>
             </div>
         </div>
+        <!-- Ventana modal para editar -->
 
-<!-- Ventana modal para editar producto -->
-<div id="editModal" class="modal">
-    <div class="modal-content">
-        <form action="{{ url_for('editar_producto') }}" method="post">
-            <input type="text" name="codigo">
-            <!-- Otros campos del formulario -->
-         
+        <div id="myModal2" class="modal">
+            <div class="modal-content">
+                <form id="edit-form" method="post">
+                    <div class="modal-header">
+                        <h2>Editar Proveedor</h2>
+                        <span class="close" onclick="closeModal2()">×</span>
+                    </div>
+                    <div class="modal-body">
+                        <input type="hidden" id="edit_id_producto" name="id_producto">
+                        <div class="form-group">
+                   
+                            <input type="hidden" id="edit_codigo" name="codigo">
+                        </div>
+                        <div class="form-group">
+                            <label for="edit_descripcion">Descripcion:</label>
+                            <input type="text" id="edit_descripcion" name="descripcion">
+                        </div>
+                        <div class="form-group">
+                            <label for="edit_categoria">Categoria:</label>
+                            <input type="text" id="edit_categoria" name="categoria">
+                        </div>
+                        <div class="form-group">
+        
+                            <input type="hidden" id="edit_id_proveedor" name="id_proveedor">
+                        </div>
+                        <div class="form-group">
+                            <label for="edit_valor_unitario">valor_unitario:</label>
+                            <input type="text" id="edit_valor_unitario" name="valor_unitario">
+                        </div>
+                        <div class="form-group">
+                            <label for="edit_unidad_medida">unidad_medida:</label>
+                            <input type="text" id="edit_unidad_medida" name="unidad_medida">
+                        </div>
+                        <div class="form-group">
+                            <label for="edit_stock">stock:</label>
+                            <input type="text" id="edit_stock" name="stock">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" onclick="closeModal2()">Cancelar</button>
+                        <button type="button" class="btn btn-default" onclick="submitForm()">Guardar cambios</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        
+      <!-- Contenedor para mostrar el mensaje de respuesta -->
+      <div id="response-message" class="modal" style="display: none;">
+        <div class="modal-content">
             <div class="modal-header">
-                <h2>Editar Producto</h2>
+                <h2>Respuesta</h2>
+                <span class="close" onclick="closeResponseModal()">×</span>
             </div>
-            <div class="modal-body">
-                <input type="hidden" id="edit_id_producto" name="id_producto">
-                <input type="hidden" id="edit_id_producto" name="codigo">
-                <div class="form-group">
-                    <label for="edit_descripcion">Descripcion:</label>
-                    <input type="text" id="edit_descripcion" name="descripcion">
-                </div>
-                <div class="form-group">
-                    <label for="edit_categoria">Categoria:</label>
-                    <input type="text" id="edit_categoria" name="categoria">
-                </div>
-                <div class="form-group">
-                    <label for="edit_nombre_proveedor">Nombre Proveedor:</label>
-                    <input type="text" id="edit_nombre_proveedor" name="nombre_proveedor">
-                </div>
-                <div class="form-group">
-                    <label for="edit_stock">Stock:</label>
-                    <input type="text" id="edit_stock" name="stock">
-                </div>
-                <div class="form-group">
-                    <label for="edit_unidad_medida">Unidad de medida:</label>
-                    <input type="text" id="edit_unidad_medida" name="unidad_medida">
-                </div>
-                <div class="form-group">
-                    <label for="edit_valor_unitario">Valor Unitario:</label>
-                    <input type="text" id="edit_valor_unitario" name="valor_unitario">
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" onclick="closeEditModal()">Cancelar</button>
-                <button type="submit" class="btn btn-default">Guardar cambios</button>
-            </div>
-        </form>
+            <div class="modal-body"></div>
+        </div>
     </div>
 </div>
 
     <script>
+        
         // Función para abrir el modal de agregar stock
         function openStockModal(id_producto) {
             // Asigna el valor del id_producto al input hidden dentro del modal
@@ -230,33 +275,51 @@
         function closeStockModal() {
             document.getElementById("stockModal").style.display = "none";
         }
-    </script>
-
-    <script>
-        // Función para abrir la ventana modal
+          // Función para abrir la ventana modal
         function openModal() {
             document.getElementById("myModal").style.display = "block";
         }
-
-        // Función para cerrar la ventana modal
-        function closeModal() {
-            document.getElementById("myModal").style.display = "none";
-        }
-
-        // Función para abrir la ventana modal de edición de productos
-        function openEditModal(descripcion, categoria, nombre_proveedor, stock, unidad_medida, valor_unitario) {
+     // Función para abrir la ventana modal de edición
+     function openEditModal(id_producto, codigo, descripcion, categoria, id_proveedor, nombre_proveedor, valor_unitario, unidad_medida, stock) {
+            document.getElementById("edit_id_producto").value = id_producto;
+            document.getElementById("edit_codigo").value = codigo;
             document.getElementById("edit_descripcion").value = descripcion;
             document.getElementById("edit_categoria").value = categoria;
-            document.getElementById("edit_nombre_proveedor").value = nombre_proveedor;
-            document.getElementById("edit_stock").value = stock;
-            document.getElementById("edit_unidad_medida").value = unidad_medida;
+            document.getElementById("edit_id_proveedor").value = id_proveedor;
             document.getElementById("edit_valor_unitario").value = valor_unitario;
-            document.getElementById("editModal").style.display = "block";
+            document.getElementById("edit_unidad_medida").value = unidad_medida;
+            document.getElementById("edit_stock").value = stock;
+            document.getElementById("myModal2").style.display = "block";
         }
 
-        // Función para cerrar la ventana modal de edición de productos
-        function closeEditModal() {
-            document.getElementById("editModal").style.display = "none";
+        // Función para cerrar el modal de edición
+        function closeModal2() {
+            document.getElementById("myModal2").style.display = "none";
+        }
+
+       // Función para enviar el formulario utilizando AJAX
+function submitForm() {
+    var formData = new FormData(document.getElementById("edit-form"));
+    var xhr = new XMLHttpRequest();
+    xhr.onreadystatechange = function() {
+        if (xhr.readyState === XMLHttpRequest.DONE) {
+            if (xhr.status === 200) {
+                // Si la respuesta es exitosa, muestra el mensaje de respuesta en el modal de edición
+                document.querySelector("#myModal2 .modal-body").innerHTML = xhr.responseText;
+            } else {
+                // Si hay un error en la respuesta, muestra un mensaje de error
+                document.querySelector("#myModal2 .modal-body").innerHTML = "Error al procesar la solicitud.";
+            }
+        }
+    };
+    xhr.open("POST", "/editar_producto", true);
+    xhr.send(formData);
+}
+
+
+        // Función para cerrar el modal de respuesta
+        function closeResponseModal() {
+            document.getElementById("response-message").style.display = "none";
         }
     </script>
 
