--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/static/css/general.css
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/static/css/general.css
@@ -291,3 +291,17 @@ td{
     font-family: 'Times New Roman', Times, serif;
     font-size: 60%;
 }
+
+.mensaje-container {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 9999;
+}
