--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/proveedores.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/proveedores.html
@@ -245,18 +245,19 @@
                 </form>
             </div>
         </div>
+    </div>
 
-        <!-- Contenedor para mostrar el mensaje de respuesta -->
-        <div id="response-message" class="modal" style="display: none;">
-            <div class="modal-content">
+           <!-- Contenedor para mostrar el mensaje de respuesta -->
+        <div id="response-message" class="modalEdit" style="display: none;" >
+            <div class="modal-content-edit">
+            <form id="edit-form" method="post">
                 <div class="modal-header">
-                    <h2>Respuesta</h2>
+                     <h2>Respuesta</h2>
                     <span class="close" onclick="closeResponseModal()">×</span>
                 </div>
-                <div class="modal-body"></div>
+            </form>
             </div>
         </div>
-    </div>
 
     <script>
         // Función para abrir la ventana modal
