--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/productos.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/productos.html
@@ -127,10 +127,15 @@
                                     <label for="medio_pago">Valor unitario:</label>
                                     <input type="text" id="valorUnitario" name="valor_unitario">
                                 </div>
-                                <div class="form-group">
-                                    <label for="medio_pago">Unidad de medida: </label>
-                                    <input type="text" id="unidadMedida" name="unidad_medida">
-                                </div>
+                                <label for="unidad_medida">Unidad medida: </label>
+                                <select id="unidad_medida" name="unidad_medida">
+                                    <option value="Abarrotes">Libra</option>
+                                    <option value="Aderezos">Gramo</option>
+                                    <option value="Anchetas">Mililitro</option>
+                                    <option value="Bebidas">Centimetro</option>
+                        
+                                </div>        
+                            </select>
                             </div>
                         </div>
                         <div class="modal-footer">
@@ -207,7 +212,7 @@
             <div class="modal-content">
                 <form id="edit-form" method="post">
                     <div class="modal-header">
-                        <h2>Editar Proveedor</h2>
+                        <h2>Editar Producto</h2>
                         <span class="close" onclick="closeModal2()">×</span>
                     </div>
                     <div class="modal-body">
@@ -275,10 +280,15 @@
         function closeStockModal() {
             document.getElementById("stockModal").style.display = "none";
         }
-          // Función para abrir la ventana modal
-        function openModal() {
-            document.getElementById("myModal").style.display = "block";
-        }
+           // Función para abrir el modal de agregar productos
+    function openModal() {
+        document.getElementById("myModal").style.display = "block";
+    }
+
+    // Función para cerrar el modal de agregar productos
+    function closeModal() {
+        document.getElementById("myModal").style.display = "none";
+    }
      // Función para abrir la ventana modal de edición
      function openEditModal(id_producto, codigo, descripcion, categoria, id_proveedor, nombre_proveedor, valor_unitario, unidad_medida, stock) {
             document.getElementById("edit_id_producto").value = id_producto;
